--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,41 @@
 @import "tailwindcss";
+@plugin "daisyui";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+[data-theme="dark"]  {
+  --color-primary: #ffe20a;
+  --color-secondary: #211f00;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-primary-content: #000000;
+  --color-secondary-content: #ffffff;
+
+  --color-background-light: #f8f8f5;
+  --color-background-dark: #0a0a0a;
+
+  --font-display: "Inter", sans-serif;
+
+  --radius: 0.25rem;
+  --radius-lg: 0.5rem;
+  --radius-xl: 0.75rem;
 }
+/* [data-theme="mydark"] {
+  --color-primary: #7d79fd;
+  --color-secondary: #c084fc;
+  --color-accent: #4ade80;
+  --color-netral: #111827;
+  --color-base-100: #212121;
+} */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-display);
+}
+/* chrome safari opera*/
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
 }
